--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is an experiment aimed at building a tool that when given a list of ints will build a shared library with a function is_int_set(int) that tests whether a given int was in that list.
+This is an experiment aimed at building a tool that when given a list of ints will build a shared library with a function is_in_set(int) that tests whether a given int is a member of that list.
 
 After correctness, the performance of is_in_set is the most important thing, while keeping within reasonable bounds the size of the shared library, the amount of memory it uses when dl_open'd, and the time it takes to generate a new one.
 
