--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 TODO:
 data-driven command line options parsing for tester
+object file name includes ${CC}
+switch from tree.h to C++ STL in tester
 hash:
   actually use correlation data in hash implementation
-  a hash with a bucket exactly cache_line sized
 winnt_port:
   tiny skiplist
   investigate cmake
